# certificates

./: .gitignore  .travis.yml  Pipfile  README.md  certificates.py  participants.csv  pyproject.toml  pytest.ini  setup.py
.github/workflows/: main.yml  publish.yml  release.yml
certificates/: __main__.py  builder.py  certificates.py  cli.py  inkscape_utils.py
tests/: test_certificates.py
