[tool.poetry]
name = "certificates"
version = "2.0.0"
description = "Generate event certificates easily."
readme = "README.md"
homepage = "https://github.com/cassiobotaro/certificates"
authors = ["cassiobotaro <cassiobotaro@gmail.com>"]
license = "Apache-2.0"
packages = [{ include = "certificates" }]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
certificates = "certificates.__main__:main"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
pytest = "^7.4.2"
ruff = "^0.1.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.ruff]
select = ["E", "F", "I", "UP"]
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
addopts = "--cov=certificates"
testpaths = "tests/"
