[tool.poetry]
name = "certificates"
version = "2.1.0"
description = "Generate event certificates easily."
readme = "README.md"
homepage = "https://github.com/cassiobotaro/certificates"
authors = ["cassiobotaro <cassiobotaro@gmail.com>"]
license = "Apache-2.0"
packages = [{ include = "certificates" }]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
certificates = "certificates.__main__:main"

[tool.poetry.group.dev.dependencies]
pytest-cov = ">=4.1,<8.0"
pytest = ">=7.4.2,<10.0.0"
ruff = ">=0.5.0,<0.16.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
addopts = "--cov=certificates"
testpaths = "tests/"
