[project]
name = "certificates"
version = "2.2.0"
description = "Generate event certificates easily."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]
authors = [
    { name = "Cassio Botaro", email = "cassiobotaro@gmail.com" },
]

[project.urls]
Repository = "htts://github.com/cassiobotaro/certificates"

[project.scripts]
certificates = "certificates.__main__:main"

[tool.uv]
package = true

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
addopts = "--cov=certificates"
testpaths = "tests/"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.1",
]
